--- a/templates/ccncs.html
+++ b/templates/ccncs.html
@@ -71,7 +71,7 @@ Centre for Computer Networking and Cyber Security
                   style="width: 500px; height: 300px; object-fit: cover;" /> </a>
               <h5 class="text-center"><a href="#"><span>Computer Networking Group</span></a></h5>
               <p align="justify">Led by Ts Chok Len Mooi</p>
-              <p align="justify"><img src="https://www.tarc.edu.my/files/focs/65A78BA2-4FD2-4EDF-8357-BF75AEBF68CD.JPG"
+              <p align="justify"><img src="../static/assets/img/why-us.png"
                   alt="" width="100" height="131" /></p>
               <p align="justify"><span>This research group aims to create a platform for students and lecturers to do
                   research and consultancy work in the area of computer networking, create interest and provide relevant
@@ -82,7 +82,7 @@ Centre for Computer Networking and Cyber Security
                   style="width: 500px; height: 300px; object-fit: cover;"  /> </a>
               <h5 class="text-center"><a href="#"><span>Cyber Security Group</span></a></h5>
               <p align="justify">Led by Ts Lim Shen Huoy</p>
-              <p align="justify"><img src="https://www.tarc.edu.my/files/focs/38EB98E2-BEEE-4272-B5D8-E6A8C9396285.JPG"
+              <p align="justify"><img src="../static/assets/img/why-us.png"
                   alt="" width="100" height="129" /></p>
               <p align="justify"><span>This research group aims to create a platform for students and lecturers to do
                   research and consultancy work in the area of cyber security, create interest and provide relevant
