--- a/templates/cicrnd.html
+++ b/templates/cicrnd.html
@@ -14,7 +14,7 @@ Centre for Integrated Circuit Research and Development
       <div class="list-order">
         <h4 style="text-align: center;"></h4>
         <h4 style="text-align: center;"><img
-            src="https://www.tarc.edu.my/files/focs/E54E907D-FCC2-4DD5-A7C6-2C67965E797A.jpg" alt="" width="125"
+            src="../static/assets/img/why-us.png" alt="" width="125"
             height="163" /></h4>
         <p style="text-align: center;">Led by Dr. Poh Tze Ven</p>
         <p style="text-align: justify;">&nbsp;</p>
