--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
                 <a href="{{ url_for('ccncs')}}" class="text-wrap">Centre for Computer Network and Cyber Security (CCNCS)</a>
               </li>
               <li>
-                <a href="{{ url_for('cictis')}}" class="text-wrap">Centre for Integrated Circuit Research and Development
+                <a href="{{ url_for('cicrnd')}}" class="text-wrap">Centre for Integrated Circuit Research and Development
                   (CICR&D)</a>
               </li>
             </ul>
