--- a/templates/ccncs.html
+++ b/templates/ccncs.html
@@ -17,7 +17,7 @@ Centre for Computer Networking and Cyber Security
         <p><!-- Feature --></p>
         <p></p>
         <p><!-- <div class="jumbotron feature">--></p>
-        <p><img src="https://www.tarc.edu.my/files/focs/ADDE4BF7-D434-4F06-A9CF-8349D3989DF0.jpg" width="150" height="225"
+        <p><img src="../static/assets/img/why-us.png" width="150" height="225"
             caption="false" style="display: block; margin-left: auto; margin-right: auto;" /></p>
        
         <p><!-- Heading --></p>
