--- a/templates/viewRecords.html
+++ b/templates/viewRecords.html
@@ -7,11 +7,11 @@ Highlights
 
 <main>
     <div class="m-4 ">
-{% for r in records.items %}
+{% for r in records %}
 <p>{{ r.staffPhoto }}</p>
 <p>{{ r.id }}</p>
-<p>{{ r.staffname }}</p>
-<p>{{ r.staffPhoto }}</p>
+<p>{{ r.staffName }}</p>
+<p>{{ r.staffPosition }}</p>
 {% endfor %}
 </div>
 </main>
