--- a/templates/base.html
+++ b/templates/base.html
@@ -110,23 +110,23 @@
             </a>
             <ul>
               <li>
-                <a href="{{ url_for('cictis')}}" class="text-wrap">Centre for ICT Innovations and Creativity
+                <a href="{{ url_for('cictis')}}" class="text-wrap text-start ">Centre for ICT Innovations and Creativity
                   (CICTIC)</a>
               </li>
               <li>
-                <a href="{{ url_for('cdsa')}}" class="text-wrap">Centre for Data Science and Analytics (CDSA)</a>
+                <a href="{{ url_for('cdsa')}}" class="text-wrap text-start ">Centre for Data Science and Analytics (CDSA)</a>
               </li>
               <li>
-                <a href="{{ url_for('cci')}}" class="text-wrap">Centre for Computational Intelligence (CCI)</a>
+                <a href="{{ url_for('cci')}}" class="text-wrap text-start ">Centre for Computational Intelligence (CCI)</a>
               </li>
               <li>
-                <a href="{{ url_for('ciot')}}" class="text-wrap">Centre for Internet of Things (CIOT)</a>
+                <a href="{{ url_for('ciot')}}" class="text-wrap text-start ">Centre for Internet of Things (CIOT)</a>
               </li>
               <li>
-                <a href="{{ url_for('ccncs')}}" class="text-wrap">Centre for Computer Network and Cyber Security (CCNCS)</a>
+                <a href="{{ url_for('ccncs')}}" class="text-wrap text-start ">Centre for Computer Network and Cyber Security (CCNCS)</a>
               </li>
               <li>
-                <a href="{{ url_for('cicrnd')}}" class="text-wrap">Centre for Integrated Circuit Research and Development
+                <a href="{{ url_for('cicrnd')}}" class="text-wrap text-start ">Centre for Integrated Circuit Research and Development
                   (CICR&D)</a>
               </li>
             </ul>
@@ -140,14 +140,14 @@
               <i class="bi bi-chevron-down"></i>
             </a>
             <ul>
-              <li><a href="{{ url_for('externalExaminers')}}" class="text-wrap">External Examiners</a></li>
+              <li><a href="{{ url_for('externalExaminers')}}" class="text-wrap text-start ">External Examiners</a></li>
               <li>
-                <a href="{{ url_for('IEAPBachelorDegree')}}" class="text-wrap">Industrial Expert Advisory Panel (IEAP) -
+                <a href="{{ url_for('IEAPBachelorDegree')}}" class="text-wrap text-start ">Industrial Expert Advisory Panel (IEAP) -
                   Bachelor
                   Degree</a>
               </li>
               <li>
-                <a href="{{ url_for('IEAPPostgraduate')}}" class="text-wrap">Industrial Expert Advisory Panel (IEAP) -
+                <a href="{{ url_for('IEAPPostgraduate')}}" class="text-wrap text-start ">Industrial Expert Advisory Panel (IEAP) -
                   Postgraduates
                   Programmes</a>
               </li>
