--- a/templates/whyChooseUs.html
+++ b/templates/whyChooseUs.html
@@ -13,6 +13,7 @@ Why Choose Us
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     text-align: center;
+    text-decoration: none;
   }
 </style>
 
