--- a/templates/whyChooseUs.html
+++ b/templates/whyChooseUs.html
@@ -4,26 +4,22 @@ Why Choose Us
 {% endblock %}
 
 {%block content %}
-<style>
-  /* div class for h1 */
-  .whyChooseUsHeader h1 {
-    display: black;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    text-align: center;
-  }
-</style>
 
-<main id = "whyChooseUs">
-  <div class="whyChooseUsHeader">
-    <img src="../static/assets/img/whyChooseUsHeader.PNG" alt="Why Choose Us (Header)"
-      style="width: 100%; height: auto; object-fit: contain">
-
-   <div class="mb-5 text-center"><h1>Programmes</h1></div>
-    <img src="../static/assets/img/whyChooseUsVisualAidImage.png" alt="Why Choose Us (Visual Aid)"
-      style="display: block; margin-left: auto; margin-right: auto; width: 60%;">
+<main id="whyChooseUs">
+  <div
+    style="background-image: url('../static/assets/img/whyChooseUsHeader.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 150px;">
+    <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Why Choose Us</h1>
+  </div>
+  <div class="container my-5">
+    <div class="row">
+      <div class="col">
+        <div class="mb-5 text-center">
+          <h1>Why Choose Us</h1>
+        </div>
+        <img src="../static/assets/img/whyChooseUsVisualAidImage.png" alt="Why Choose Us (Visual Aid)"
+          style="display: block; margin-left: auto; margin-right: auto; width: 60%;">
+      </div>
+    </div>
   </div>
 </main>
 {%endblock %}
