load programme data into html

--- a/templates/programme.html
+++ b/templates/programme.html
@@ -57,9 +57,9 @@
         <div id="doctor" class="tab-pane fade show active">
           <p>The Faculty of Computing and Information Technology (FOCS) offers the following Doctor of Philosophy programmes:</p>
             <ul>
-              <li><a href="{{ url_for('programme1',id='1')}}">Doctor of Philosophy (Computer Science)</a></li>
-              <li><a href="{{ url_for('programme1',id='2')}}">Doctor of Philosophy (Information Technology)</a></li>
-              <li><a href="{{ url_for('programme1',id='3')}}">Doctor of Philosophy (Mathematical Sciences)</a></li>
+              <li><a href="{{ url_for('programme1',id=1)}}">Doctor of Philosophy (Computer Science)</a></li>
+              <li><a href="{{ url_for('programme1',id=2)}}">Doctor of Philosophy (Information Technology)</a></li>
+              <li><a href="{{ url_for('programme1',id=3)}}">Doctor of Philosophy (Mathematical Sciences)</a></li>
             </ul>
         </div>
         <div id="master" class="tab-pane fade">
