--- a/templates/programme2.html
+++ b/templates/programme2.html
@@ -24,11 +24,11 @@
     </div>
   </div>
 </div>
-
+{% for prog in progs %}
 <div class="container my-5">
   <div class="row">
     <div class="col">
-      <div class="mb-5 text-center"><h1>Doctor of Philosophy (Computer Science) (N/481/8/0788) (10/25) (MQA/PA 10772)</h1></div>
+      <div class="mb-5 text-center"><h1>{{prog.progName}}</h1></div>
     </div>
   </div>
 
@@ -72,6 +72,6 @@
         </div>
     </div>
 </div>
-
+{% endfor %}
 </div>
 {% endblock %}
