dk what to type

--- a/templates/programme1.html
+++ b/templates/programme1.html
@@ -72,20 +72,20 @@
         </div>
         <div id="req" class="tab-pane fade">
             <ul>
-                <li>Minimum Entry Requirements
+                <li><h4>Minimum Entry Requirements</h4>
                     <ul>
                         <li>A Master's Degree or equivalent AND candidates must have completed ONE (1) of their Degrees (Master's or Bachelor's) in Computing or related to computing.</li>
                     </ul>
                 </li>
-                <li>English Language Requirements
+                <li><h4>English Language Requirements</h4>
                     <ul>
-                        <li>Malaysian Students
+                        <li><h5>Malaysian Students</h5>
                             <ul>
                                 <li>MUET Band 4.0 or IELTS Band 6.0 or CEFR Mid B2 or TOEFL iBT 60 or equivalent; OR</li>
                                 <li>Exemption of English Language requirement if medium of instruction during Master studies was in English</li>
                             </ul>
                         </li>
-                        <li>International Students
+                        <li><h5>International Students</h5>
                             <ul>
                                 <li>IELTS Band 6.0 or CEFR Mid B2, TOEFL iBT 60 or equivalent; OR</li>
                                 <li>Exemption of English Language requirement if medium of instruction during Master studies was in English</li>
