--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,16 @@
     </div>
   </div>  
 
+<form action="" method="POST">
+<div class="container-fluid my-5 d-flex justify-content-center align-items-center w-75">
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Programme" aria-label="Programme" aria-describedby="button-addon2">
+    <button class="btn btn-primary" type="submit" id="button-addon2" style="border-radius: 0;">Search</button>
+  </div>
+</div>
+</form>
+
+
     <div>
       <div class="container d-flex flex-column w-75">
         <div class="row row-cols-1 row-cols-md-6 g-4 justify-content-center m-4 mb-5">
@@ -126,6 +136,9 @@
       </div>
     </div>
   </div>
+
+  
+  
 
 </main><!-- End #main -->
 {% endblock %}
