--- a/templates/base.html
+++ b/templates/base.html
@@ -337,6 +337,6 @@
       chat-title="TARUMT-FAQ-BOT"
       agent-id="ae4d72d5-f503-465c-85aa-1b8d690f7163"
       language-code="en"
-    ></df-messenger>>
+    ></df-messenger>
   </body>
 </html>
