--- a/templates/index.html
+++ b/templates/index.html
@@ -59,10 +59,10 @@
     </div>
   </div>  
 
-<form action="" method="POST">
+<form action="{{url_for('searchProgramme')}}" method="POST">
 <div class="container-fluid my-5 d-flex justify-content-center align-items-center w-75">
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Programme" aria-label="Programme" aria-describedby="button-addon2">
+    <input type="text" class="form-control" placeholder="Programme" aria-label="Programme" aria-describedby="button-addon2" name="programme">
     <button class="btn btn-primary" type="submit" id="button-addon2" style="border-radius: 0;">Search</button>
   </div>
 </div>
