Done Checking Eligibility

--- a/templates/enrollment.html
+++ b/templates/enrollment.html
@@ -50,6 +50,17 @@ Enrollment
 
     <form class="mt-1" id="section2" style="display: none;">
       <h3 class="text-center mb-3">Academic Qualification</h3>
+      <div class="mb-3">
+        <label class="form-label" for="inputProgramme">Select Your Programme</label>
+        <select class="form-select" name="inputProgramme" id="inputProgramme"
+          aria-label="Default select example">
+          <option selected value="">Select an option</option>
+          <option value="CS">Diploma in Computer Science</option>
+          <option value="IS">Diploma in Information System</option>
+          <option value="IT">Diploma in Information Technology</option>
+          <option value="SE">Diploma in Software Engineering</option>
+        </select>
+      </div>
       <div class="row mb-3">
         <div class="col-6 ">
           <label class="form-label" for="inputQualification">Qualification</label>
@@ -434,13 +445,160 @@ Enrollment
                   <option value="X">X</option>
                 </select>
               </td>
+              
+            </tr>
+            <tr>
+              <td style="width: 35%;">
+                <select class="form-select qualificationSubject" name="qualificationSubject" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="BM">Bahasa Melayu</option>
+                  <option value="BI">Bahasa Inggeris</option>
+                  <option value="BC">Bahasa Cina</option>
+                  <option value="PM">Pendidikan Moral</option>
+                  <option value="MM">Matematik</option>
+                  <option value="MT">Matematik Tambahan</option>
+                  <option value="KM">Kimia</option>
+                  <option value="FZ">Fizik</option>
+                  <option value="BO">Biologi</option>
+                  <option value="SEJ">Sejarah</option>
+                  <option value="PP">Prinsip Perakaunan</option>
+                  <option value="PI">Pendidikan Islam</option>
+                </select>
+              </td>
+              <td style="width: 15%;">
+                <select class="form-select qualificationGrade" name="qualificationGrade" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="A+">A+</option>
+                  <option value="A">A</option>
+                  <option value="A-">A-</option>
+                  <option value="B+">B+</option>
+                  <option value="B">B</option>
+                  <option value="C+">C+</option>
+                  <option value="C">C</option>
+                  <option value="D">D</option>
+                  <option value="E">E</option>
+                  <option value="G">G</option>
+                  <option value="X">X</option>
+                </select>
+              </td>
+              <td style="width: 35%;">
+                <select class="form-select qualificationSubject" name="qualificationSubject" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="BM">Bahasa Melayu</option>
+                  <option value="BI">Bahasa Inggeris</option>
+                  <option value="BC">Bahasa Cina</option>
+                  <option value="PM">Pendidikan Moral</option>
+                  <option value="MM">Matematik</option>
+                  <option value="MT">Matematik Tambahan</option>
+                  <option value="KM">Kimia</option>
+                  <option value="FZ">Fizik</option>
+                  <option value="BO">Biologi</option>
+                  <option value="SEJ">Sejarah</option>
+                  <option value="PP">Prinsip Perakaunan</option>
+                  <option value="PI">Pendidikan Islam</option>
+                </select>
+              </td>
+              <td style="width: 15%;">
+                <select class="form-select qualificationGrade" name="qualificationGrade" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="A+">A+</option>
+                  <option value="A">A</option>
+                  <option value="A-">A-</option>
+                  <option value="B+">B+</option>
+                  <option value="B">B</option>
+                  <option value="C+">C+</option>
+                  <option value="C">C</option>
+                  <option value="D">D</option>
+                  <option value="E">E</option>
+                  <option value="G">G</option>
+                  <option value="X">X</option>
+                </select>
+              </td>
+              
+            </tr>
+            <tr>
+              <td style="width: 35%;">
+                <select class="form-select qualificationSubject" name="qualificationSubject" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="BM">Bahasa Melayu</option>
+                  <option value="BI">Bahasa Inggeris</option>
+                  <option value="BC">Bahasa Cina</option>
+                  <option value="PM">Pendidikan Moral</option>
+                  <option value="MM">Matematik</option>
+                  <option value="MT">Matematik Tambahan</option>
+                  <option value="KM">Kimia</option>
+                  <option value="FZ">Fizik</option>
+                  <option value="BO">Biologi</option>
+                  <option value="SEJ">Sejarah</option>
+                  <option value="PP">Prinsip Perakaunan</option>
+                  <option value="PI">Pendidikan Islam</option>
+                </select>
+              </td>
+              <td style="width: 15%;">
+                <select class="form-select qualificationGrade" name="qualificationGrade" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="A+">A+</option>
+                  <option value="A">A</option>
+                  <option value="A-">A-</option>
+                  <option value="B+">B+</option>
+                  <option value="B">B</option>
+                  <option value="C+">C+</option>
+                  <option value="C">C</option>
+                  <option value="D">D</option>
+                  <option value="E">E</option>
+                  <option value="G">G</option>
+                  <option value="X">X</option>
+                </select>
+              </td>
+              <td style="width: 35%;">
+                <select class="form-select qualificationSubject" name="qualificationSubject" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="BM">Bahasa Melayu</option>
+                  <option value="BI">Bahasa Inggeris</option>
+                  <option value="BC">Bahasa Cina</option>
+                  <option value="PM">Pendidikan Moral</option>
+                  <option value="MM">Matematik</option>
+                  <option value="MT">Matematik Tambahan</option>
+                  <option value="KM">Kimia</option>
+                  <option value="FZ">Fizik</option>
+                  <option value="BO">Biologi</option>
+                  <option value="SEJ">Sejarah</option>
+                  <option value="PP">Prinsip Perakaunan</option>
+                  <option value="PI">Pendidikan Islam</option>
+                </select>
+              </td>
+              <td style="width: 15%;">
+                <select class="form-select qualificationGrade" name="qualificationGrade" id="inputQualification"
+                  aria-label="Default select example">
+                  <option selected disabled value="">Select an option</option>
+                  <option value="A+">A+</option>
+                  <option value="A">A</option>
+                  <option value="A-">A-</option>
+                  <option value="B+">B+</option>
+                  <option value="B">B</option>
+                  <option value="C+">C+</option>
+                  <option value="C">C</option>
+                  <option value="D">D</option>
+                  <option value="E">E</option>
+                  <option value="G">G</option>
+                  <option value="X">X</option>
+                </select>
+              </td>
+              
             </tr>
           </tbody>
         </table>
       </div>
       <div class="d-flex justify-content-center">
         <button type="button" class="btn btn-primary d-inline m-2" onclick="showSection('section1')">Previous</button>
-        <button type="button" class="btn btn-primary d-inline m-2">Submit</button>
+        <button type="button" class="btn btn-primary d-inline m-2" onclick="checkEligibility()">Submit</button>
       </div>
     </form>
   </div>
@@ -485,18 +643,15 @@ Enrollment
           for (let i = 0; i < subjectContainer[count].options.length; i++) {
             if (subjectContainer[count].options[i].value === d) {
               subjectContainer[count].selectedIndex = i;
-              for (let g = 0; g < gradeContainer[count].options.length; g++) {
+            }
+          }
+          for (let g = 0; g < gradeContainer[count].options.length; g++) {
                 if (gradeContainer[count].options[g].value === data[d]) {
                   gradeContainer[count].selectedIndex = g;
                 }
               }
-            }
-          }
           count++;
         }
-
-
-
 
         resultContainer.innerHTML = JSON.stringify(data);
       })
@@ -504,5 +659,63 @@ Enrollment
         console.error("Error:", error);
       });
   }
+
+  const minRequirement = {
+    "BM": "E",
+    "BI": "C",
+    "MM": "C",
+    "SEJ": "E",
+    "MT": "C"
+  };
+
+  const gradingSystem = {
+    "A+": 5,
+    "A": 4,
+    "A-": 3.7,
+    "B+": 3.3,
+    "B": 3,
+    "C+": 2.7,
+    "C": 2.3,
+    "D": 2,
+    "E": 1.7,
+    "G": 1,
+    "X": 0,
+  };
+
+  function checkEligibility(){
+      const subjectContainer = document.getElementsByClassName("qualificationSubject");
+      const gradeContainer = document.getElementsByClassName("qualificationGrade");
+      let isEligible = false;
+      let selectedSubject = {};
+
+      for(let i = 0; i < subjectContainer.length; i++){
+        if(subjectContainer[i].selectedIndex != 0 && gradeContainer[i].selectedIndex != 0){
+            selectedSubject[subjectContainer[i].value] = gradeContainer[i].value; 
+        }
+      }
+
+
+      if(Object.keys(minRequirement).every((key) => selectedSubject.hasOwnProperty(key))){
+        console.log("Enter first if");
+        for(let req in minRequirement){
+          console.log(req);
+          if(gradingSystem[minRequirement[req]] <= gradingSystem[selectedSubject[req]]){
+            console.log('True')
+            isEligible = true;
+          } else {
+            isEligible = false;
+            //pop up uneligible msg
+            console.log('uneligible');
+            break;
+          }
+        }
+      }
+
+      if(isEligible){
+        console.log('eligible');
+      }
+      
+  }
+
 </script>
 {%endblock %}
